# CFLscraPy

./: README.md  cfl_scraper.py  pyproject.toml
cflscrapy/: __init__.py  cfl_scraper.py
